Refactoring second phase